# cheap-low-traffic-stack

./: LICENSE  README.md
backend/: Dockerfile  README.md  deploy.sh  format.py  pyproject.toml  requirements.txt  update_requirements.sh
backend/src/cheap/: main.py
dynamodb/: create_tables.sh
frontend/: .env.development  .env.production  package-lock.json
frontend/src/: constants.tsx
frontend/src/app/: LambdaWarmer.tsx  page.tsx
frontend/src/app/items/: page.tsx
