[tool.poetry]
name = "cheap"
version = "0.1.0"
description = "Demonstration of a cheap low traffic full stack"
authors = ["Nassir Al-Khishman <nassir.khishman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
aiobotocore = "^2.6.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
types-aiobotocore = {extras = ["essential"], version = "^2.6.0"}
black = "^23.7.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
format = "format:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
